find_package( Doxygen REQUIRED )

add_custom_target( doc 
${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/Array/Doxyfile
COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/EALib/Doxyfile
COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/FileUtil/Doxyfile
COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/Fuzzy/Doxyfile
COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/LinAlg/Doxyfile
COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/Mixture/Doxyfile
COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/MOO-EALib/Doxyfile
COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/ReClaM/Doxyfile
COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/Rng/Doxyfile
COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/TimeSeries/Doxyfile
WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
)

add_custom_target( manual
latex ${CMAKE_CURRENT_SOURCE_DIR}/EALibManual/EALib.tex
COMMAND bibtex ${CMAKE_CURRENT_SOURCE_DIR}/EALibManual/EALib
COMMAND latex ${CMAKE_CURRENT_SOURCE_DIR}/EALibManual/EALib.tex
COMMAND latex ${CMAKE_CURRENT_SOURCE_DIR}/EALibManual/EALib.tex
WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/EALibManual 
)

OPTION( SHARK_OPT_INSTALL_DOCUMENTATION "Install documentation." OFF )

IF( SHARK_OPT_INSTALL_DOCUMENTATION )

# INSTALL( DIRECTORY html
#DESTINATION ${SHARK_INSTALL_DOC_DIR}
#)

INSTALL( FILES ${CMAKE_CURRENT_SOURCE_DIR}/index.html ${CMAKE_CURRENT_SOURCE_DIR}/GettingStarted.html ${CMAKE_CURRENT_SOURCE_DIR}/FAQ.html ${CMAKE_CURRENT_SOURCE_DIR}/Tutorials.html
	DESTINATION ${SHARK_INSTALL_DOC_DIR}
)

INSTALL( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/css
	DESTINATION ${SHARK_INSTALL_DOC_DIR}
	PATTERN ".*" EXCLUDE
	PATTERN "Doxyfile" EXCLUDE
)

INSTALL( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/images
	DESTINATION ${SHARK_INSTALL_DOC_DIR}
	PATTERN ".*" EXCLUDE
	PATTERN "Doxyfile" EXCLUDE
)

INSTALL( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Array
DESTINATION ${SHARK_INSTALL_DOC_DIR}
PATTERN ".*" EXCLUDE
)

INSTALL( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/EALib
DESTINATION ${SHARK_INSTALL_DOC_DIR}
PATTERN ".*" EXCLUDE
)

INSTALL( FILES ${CMAKE_CURRENT_SOURCE_DIR}/"EALibManual/EALib.dvi"
DESTINATION ${SHARK_INSTALL_DOC_DIR}/EALib
OPTIONAL
)

INSTALL( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/FileUtil
DESTINATION ${SHARK_INSTALL_DOC_DIR}
PATTERN ".*" EXCLUDE
)

INSTALL( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Fuzzy
DESTINATION ${SHARK_INSTALL_DOC_DIR}
PATTERN ".*" EXCLUDE
)

INSTALL( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/LinAlg
DESTINATION ${SHARK_INSTALL_DOC_DIR}
PATTERN ".*" EXCLUDE
)

INSTALL( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Mixture
DESTINATION ${SHARK_INSTALL_DOC_DIR}
PATTERN ".*" EXCLUDE
)

INSTALL( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/MOO-EALib
DESTINATION ${SHARK_INSTALL_DOC_DIR}
PATTERN ".*" EXCLUDE
)

INSTALL( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ReClaM
DESTINATION ${SHARK_INSTALL_DOC_DIR}
PATTERN ".*" EXCLUDE
)

INSTALL( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Rng
DESTINATION ${SHARK_INSTALL_DOC_DIR}
PATTERN ".*" EXCLUDE
)

INSTALL( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/TimeSeries
DESTINATION ${SHARK_INSTALL_DOC_DIR}
PATTERN ".*" EXCLUDE
)

INSTALL( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/faq
DESTINATION ${SHARK_INSTALL_DOC_DIR}
PATTERN ".*" EXCLUDE
)

INSTALL( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Tutorials
DESTINATION ${SHARK_INSTALL_DOC_DIR}
PATTERN ".*" EXCLUDE
)

ENDIF( SHARK_OPT_INSTALL_DOCUMENTATION )
